# ChangeLog for dev-python/gnosis-utils
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/gnosis-utils/ChangeLog,v 1.13 2009/02/15 22:22:37 patrick Exp $

  15 Feb 2009; Patrick Lauer <patrick@gentoo.org> gnosis-utils-1.2.1.ebuild:
  Adding ~amd64 keyword

  05 Jan 2008; Ali Polatel <hawking@gentoo.org> -gnosis-utils-1.1.1.ebuild:
  Dropped old broken version, bug 203347

  05 Jan 2008; Raúl Porcel <armin76@gentoo.org> gnosis-utils-1.2.1.ebuild:
  ia64 stable wrt #204251

  04 Jan 2008; Markus Meier <maekke@gentoo.org> gnosis-utils-1.2.1.ebuild:
  x86 stable, bug #204251

  04 Jan 2008; Ali Polatel <hawking@gentoo.org> gnosis-utils-1.2.1.ebuild:
  Added src_test.

*gnosis-utils-1.2.1 (15 Feb 2007)

  15 Feb 2007; Tiziano Müller <dev-zero@gentoo.org>
  -gnosis-utils-1.0.6.ebuild, +gnosis-utils-1.2.1.ebuild:
  Version bump. Dropped old version.

  12 Jul 2006; Aron Griffis <agriffis@gentoo.org> gnosis-utils-1.1.1.ebuild:
  Mark 1.1.1 stable on ia64

  01 Apr 2006; Aron Griffis <agriffis@gentoo.org> gnosis-utils-1.1.1.ebuild:
  Mark 1.1.1 ~ia64

  30 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  30 Oct 2004; Rob Cakebread <pythonhead@gentoo.org>
  gnosis-utils-1.1.1.ebuild:
  Marked x86 stable

*gnosis-utils-1.1.1 (28 Mar 2004)

  28 Mar 2004; Bryan Østergaard <kloeri@gentoo.org> gnosis-utils-1.0.6.ebuild,
  gnosis-utils-1.1.1.ebuild:
  Add new version, update SRC_URI.

*gnosis-utils-1.0.6 (10 May 2003)

  10 May 2003; Alastair Tse <liquidx@gentoo.org> gnosis-utils-1.0.6.ebuild:
  initial ebuild. thanks to Randall Randall <randall@randallsquared.com>.
